--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Introduction and brief description about myself.</p>
+        <p>Hi! My name is Juan and I studied Computer Science at the University of Calgary.
+            The thing I love most about programming is being able to create programs and tools that are directly useful or just fun to me.
+            I mainly code in Java, Python, and C#.
+        </p>
     </section>
 
     <section id="portfolio">
